# CAN-Telemetry-API-Service

./: .gitignore  CHANGELOG.md  NMEA-API-Service  README.md  can-telemetry.run  can-telemetry.service  can0-setup.service  deploy-can-telemetry.sh  pyproject.toml
.github/workflows/: docker-lint.yml  tests.yml
debug/: 0-door.txt  1-door.txt  2-door.txt  20260520-candump.txt  3-door.txt  4-door.txt  5-door.txt  6-door.txt  can0-doors-dump-2.txt  can0-doors-dump.txt
doc/: API-TELEMETRY-V1.md  CONFIGURATION.md
docker/: Dockerfile  build-rk3568.sh  docker-compose.yml  entrypoint.sh  install-remote.sh
docker/can-telemetry/: README.md  install-to-opt.sh
docker/can-telemetry/etc/: telemetry-provider.toml
etc/: telemetry-provider.toml
src/: api_server.py  main.py  runner_task.py
src/log_config/: log_config.py
src/models/: data_models.py
src/telemetry/: cache.py
src/vehicle_can/: __init__.py  bus.py
src/vehicle_can/decoders/: __init__.py  base.py  bus_fms.py  dbc_generic.py  noop.py  registry.py  t856.py  t856.py.bydoc.arvhived
telemetry-client/: README.md  client.ini  client.ini.example  door_logger.py  install-remote.sh  install.sh  telemetry-client.service
tests/: conftest.py  test_api_endpoints.py  test_config_load.py  test_decoder.py  test_t856_doors_logs.py
utils/: can-brut-force.sh
