[project]
name = "can-telemetry-api-service"
version = "0.1.0"
description = "CAN bus telemetry exposed via REST API (ITxPT / Bus-FMS oriented)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cantools>=40.0.0",
    "fastapi>=0.115.0",
    "python-can>=4.5.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
